bindings/c/SpecUtils_c.h

typedef struct SpecUtils_SpecFile SpecUtils_SpecFile;
typedef struct SpecUtils_Measurement SpecUtils_Measurement;
typedef struct SpecUtils_EnergyCal SpecUtils_EnergyCal;
typedef struct SpecUtils_CountedRef_EnergyCal SpecUtils_CountedRef_EnergyCal;
enum SpecUtils_SourceType
{
  SpecUtils_SourceType_IntrinsicActivity, 
  SpecUtils_SourceType_Calibration,
  SpecUtils_SourceType_Background, 
  SpecUtils_SourceType_Foreground,
  SpecUtils_SourceType_Unknown
};
DLLEXPORT bool CALLINGCONVENTION
SpecUtils_SpecFile_set_measurement_position( SpecUtils_SpecFile *instance,
                    const double longitude,
                    const double latitude,
                    const int64_t microseconds_since_unix_epoch,
                    const SpecUtils_Measurement * const measurement );
DLLEXPORT bool CALLINGCONVENTION
SpecUtils_SpecFile_set_measurement_title( SpecUtils_SpecFile * instance,
                 const char * const title,
                 const SpecUtils_Measurement * const measurement );
DLLEXPORT bool CALLINGCONVENTION
SpecUtils_SpecFile_set_measurement_contained_neutrons( SpecUtils_SpecFile *instance,
                              const bool contained, const float counts,
                              const float neutron_live_time,
                              const SpecUtils_Measurement * const measurement );
DLLEXPORT bool CALLINGCONVENTION
SpecUtils_SpecFile_set_measurement_energy_calibration( SpecUtils_SpecFile *instance,
                         SpecUtils_CountedRef_EnergyCal *energy_cal,
                         const SpecUtils_Measurement * const measurement );
DLLEXPORT SpecUtils_Measurement * CALLINGCONVENTION
SpecUtils_Measurement_create();
DLLEXPORT SpecUtils_Measurement * CALLINGCONVENTION
SpecUtils_Measurement_clone( const SpecUtils_Measurement * const instance );
DLLEXPORT void CALLINGCONVENTION
SpecUtils_Measurement_destroy( SpecUtils_Measurement *instance );
DLLEXPORT uint32_t CALLINGCONVENTION
SpecUtils_Measurement_memmorysize( const SpecUtils_Measurement * const instance );
DLLEXPORT void CALLINGCONVENTION
SpecUtils_Measurement_set_equal( SpecUtils_Measurement *lhs, const SpecUtils_Measurement *rhs );
DLLEXPORT void CALLINGCONVENTION
SpecUtils_Measurement_reset( SpecUtils_Measurement *instance );
DLLEXPORT const char * CALLINGCONVENTION
SpecUtils_Measurement_description( const SpecUtils_Measurement * const instance );
DLLEXPORT void CALLINGCONVENTION
SpecUtils_Measurement_set_description( SpecUtils_Measurement *instance,
                                      const char * const description );
DLLEXPORT const char * CALLINGCONVENTION
SpecUtils_Measurement_source_string( const SpecUtils_Measurement * const instance );
DLLEXPORT void CALLINGCONVENTION
SpecUtils_Measurement_set_source_string( SpecUtils_Measurement *instance,
                                        const char * const source_string );
DLLEXPORT void CALLINGCONVENTION 
SpecUtils_Measurement_set_gamma_counts( SpecUtils_Measurement *instance,
                                       const float *counts,
                                       const uint32_t nchannels,
                                       const float live_time,
                                       const float real_time );
DLLEXPORT void CALLINGCONVENTION
SpecUtils_Measurement_set_neutron_counts( SpecUtils_Measurement *instance,
                                         const float * const counts,
                                         const uint32_t num_tubes,
                                         const float neutron_live_time );
DLLEXPORT const char * CALLINGCONVENTION
SpecUtils_Measurement_title( const SpecUtils_Measurement * const instance );
DLLEXPORT void CALLINGCONVENTION
SpecUtils_Measurement_set_title( SpecUtils_Measurement *instance,
                                const char * const title );
DLLEXPORT int64_t CALLINGCONVENTION
SpecUtils_Measurement_start_time_usecs( SpecUtils_Measurement *instance );
DLLEXPORT void CALLINGCONVENTION
SpecUtils_Measurement_set_start_time_usecs( SpecUtils_Measurement *instance,
                                           const int64_t start_time );
DLLEXPORT bool CALLINGCONVENTION
SpecUtils_Measurement_set_start_time_str( SpecUtils_Measurement *instance,
                                            const char * const start_time_str );
DLLEXPORT char CALLINGCONVENTION
SpecUtils_Measurement_pcf_tag( const SpecUtils_Measurement * const instance );
DLLEXPORT void CALLINGCONVENTION
SpecUtils_Measurement_set_pcf_tag( SpecUtils_Measurement *instance,
                                  const char tag_char );
DLLEXPORT uint32_t CALLINGCONVENTION 
SpecUtils_Measurement_number_gamma_channels( const SpecUtils_Measurement * const instance );
DLLEXPORT const float * CALLINGCONVENTION
SpecUtils_Measurement_gamma_channel_counts( const SpecUtils_Measurement * const instance );
DLLEXPORT const float * CALLINGCONVENTION
SpecUtils_Measurement_energy_bounds( const SpecUtils_Measurement * const instance );
DLLEXPORT const SpecUtils_EnergyCal * CALLINGCONVENTION
SpecUtils_Measurement_energy_calibration( const SpecUtils_Measurement * const instance );
DLLEXPORT const SpecUtils_CountedRef_EnergyCal * CALLINGCONVENTION
SpecUtils_Measurement_energy_calibration_ref( const SpecUtils_Measurement * const instance );
DLLEXPORT float CALLINGCONVENTION 
SpecUtils_Measurement_real_time( const SpecUtils_Measurement * const instance );
DLLEXPORT float CALLINGCONVENTION
SpecUtils_Measurement_live_time( const SpecUtils_Measurement * const instance );
DLLEXPORT float CALLINGCONVENTION 
SpecUtils_Measurement_neutron_live_time( const SpecUtils_Measurement * const instance );
DLLEXPORT double CALLINGCONVENTION 
SpecUtils_Measurement_gamma_count_sum( const SpecUtils_Measurement * const instance );
DLLEXPORT double CALLINGCONVENTION
SpecUtils_Measurement_neutron_count_sum( const SpecUtils_Measurement * const instance );
DLLEXPORT bool CALLINGCONVENTION
SpecUtils_Measurement_is_occupied( const SpecUtils_Measurement * const instance );
DLLEXPORT bool CALLINGCONVENTION
SpecUtils_Measurement_contained_neutron( const SpecUtils_Measurement * const instance );
DLLEXPORT int CALLINGCONVENTION
SpecUtils_Measurement_sample_number(const SpecUtils_Measurement * const instance);
DLLEXPORT void CALLINGCONVENTION
SpecUtils_Measurement_set_sample_number( SpecUtils_Measurement *instance,
                                          const int samplenum );
DLLEXPORT const char * CALLINGCONVENTION
SpecUtils_Measurement_detector_name( const SpecUtils_Measurement * const instance );
DLLEXPORT void CALLINGCONVENTION
SpecUtils_Measurement_set_detector_name( SpecUtils_Measurement * instance,
                                          const char *name );
DLLEXPORT float CALLINGCONVENTION
SpecUtils_Measurement_speed( const SpecUtils_Measurement * const instance );
enum SpecUtils_OccupancyStatus
{
  SpecUtils_OccupancyStatus_NotOccupied,
  SpecUtils_OccupancyStatus_Occupied,
  SpecUtils_OccupancyStatus_Unknown
};
DLLEXPORT enum SpecUtils_OccupancyStatus CALLINGCONVENTION
SpecUtils_Measurement_occupancy_status( const SpecUtils_Measurement * const instance );
DLLEXPORT void CALLINGCONVENTION
SpecUtils_Measurement_set_occupancy_status( SpecUtils_Measurement *instance,
                       const enum SpecUtils_OccupancyStatus status );
DLLEXPORT bool CALLINGCONVENTION
SpecUtils_Measurement_has_gps_info( const SpecUtils_Measurement * const instance );
DLLEXPORT double CALLINGCONVENTION
SpecUtils_Measurement_latitude( const SpecUtils_Measurement * const instance );
DLLEXPORT double CALLINGCONVENTION
SpecUtils_Measurement_longitude( const SpecUtils_Measurement * const instance );
DLLEXPORT int64_t CALLINGCONVENTION
SpecUtils_Measurement_position_time_microsec( const SpecUtils_Measurement * const instance );
DLLEXPORT void CALLINGCONVENTION
SpecUtils_Measurement_set_position( SpecUtils_Measurement *instance,
                                     const double longitude,
                                     const double latitude,
                                     const int64_t position_time_microsec );
DLLEXPORT float CALLINGCONVENTION
SpecUtils_Measurement_dose_rate( const SpecUtils_Measurement * const instance );
DLLEXPORT float CALLINGCONVENTION
SpecUtils_Measurement_exposure_rate( const SpecUtils_Measurement * const instance );
DLLEXPORT const char * CALLINGCONVENTION
SpecUtils_Measurement_detector_type( const SpecUtils_Measurement * const instance );
enum SpecUtils_QualityStatus
{
  SpecUtils_QualityStatus_Good,
  SpecUtils_QualityStatus_Suspect,
  SpecUtils_QualityStatus_Bad,
  SpecUtils_QualityStatus_Missing
};
DLLEXPORT enum SpecUtils_QualityStatus CALLINGCONVENTION
SpecUtils_Measurement_quality_status( const SpecUtils_Measurement * const instance );
DLLEXPORT enum SpecUtils_SourceType CALLINGCONVENTION
SpecUtils_Measurement_source_type( const SpecUtils_Measurement * const instance );
DLLEXPORT void
SpecUtils_Measurement_set_source_type( SpecUtils_Measurement *instance,
                                        const enum SpecUtils_SourceType type );
DLLEXPORT uint32_t CALLINGCONVENTION
SpecUtils_Measurement_number_remarks( const SpecUtils_Measurement * const instance );
DLLEXPORT const char * CALLINGCONVENTION
SpecUtils_Measurement_remark( const SpecUtils_Measurement * const instance,
                               const uint32_t remark_index );
DLLEXPORT uint32_t CALLINGCONVENTION
SpecUtils_Measurement_number_parse_warnings( const SpecUtils_Measurement * const instance );
DLLEXPORT const char * CALLINGCONVENTION
SpecUtils_Measurement_parse_warning( const SpecUtils_Measurement * const instance,
                                      const uint32_t remark_index );
DLLEXPORT double CALLINGCONVENTION
SpecUtils_Measurement_gamma_integral( const SpecUtils_Measurement * const instance,
                                       const float lower_energy, const float upper_energy );
DLLEXPORT double CALLINGCONVENTION
SpecUtils_Measurement_gamma_channels_sum( const SpecUtils_Measurement * const instance,
                                           const uint32_t startbin,
                                           const uint32_t endbin );
DLLEXPORT uint32_t CALLINGCONVENTION
SpecUtils_Measurement_derived_data_properties( const SpecUtils_Measurement * const instance );
DLLEXPORT bool CALLINGCONVENTION
SpecUtils_Measurement_combine_gamma_channels( SpecUtils_Measurement *instance,
                                               const uint32_t nchannel );
DLLEXPORT bool CALLINGCONVENTION
SpecUtils_Measurement_rebin( SpecUtils_Measurement *instance,
                              const SpecUtils_CountedRef_EnergyCal * const cal );
DLLEXPORT bool CALLINGCONVENTION
SpecUtils_Measurement_set_energy_calibration( SpecUtils_Measurement *instance,
                                               const SpecUtils_CountedRef_EnergyCal * const cal );
DLLEXPORT SpecUtils_EnergyCal * CALLINGCONVENTION
SpecUtils_EnergyCal_create();
DLLEXPORT void CALLINGCONVENTION
SpecUtils_EnergyCal_destroy( SpecUtils_EnergyCal *instance );
DLLEXPORT SpecUtils_CountedRef_EnergyCal * CALLINGCONVENTION
SpecUtils_CountedRef_EnergyCal_create();
DLLEXPORT void CALLINGCONVENTION
SpecUtils_CountedRef_EnergyCal_destroy( SpecUtils_CountedRef_EnergyCal *instance );
DLLEXPORT const SpecUtils_EnergyCal * CALLINGCONVENTION
SpecUtils_EnergyCal_ptr_from_ref( SpecUtils_CountedRef_EnergyCal *instance );
DLLEXPORT SpecUtils_CountedRef_EnergyCal * CALLINGCONVENTION
SpecUtils_EnergyCal_make_counted_ref( SpecUtils_EnergyCal *instance );
enum SpecUtils_EnergyCalType
{
  SpecUtils_EnergyCal_Polynomial,
  SpecUtils_EnergyCal_FullRangeFraction,
  SpecUtils_EnergyCal_LowerChannelEdge,
  SpecUtils_EnergyCal_UnspecifiedUsingDefaultPolynomial,
  SpecUtils_EnergyCal_InvalidEquationType
};
DLLEXPORT enum SpecUtils_EnergyCalType CALLINGCONVENTION
SpecUtils_EnergyCal_type( const SpecUtils_EnergyCal * const instance );
DLLEXPORT bool CALLINGCONVENTION
SpecUtils_EnergyCal_valid( const SpecUtils_EnergyCal * const instance );
DLLEXPORT uint32_t CALLINGCONVENTION
SpecUtils_EnergyCal_number_coefficients( const SpecUtils_EnergyCal * const instance );
DLLEXPORT const float * CALLINGCONVENTION
SpecUtils_EnergyCal_coefficients( const SpecUtils_EnergyCal * const instance );