bindings/csharp/SpecUtils/NativeMethods.cs


    [DllImport(LibName, CallingConvention = CC)]
    [return: MarshalAs(UnmanagedType.U1)]
    internal static extern bool SpecUtils_SpecFile_set_measurement_position(
        IntPtr instance, double longitude, double latitude,
        long microsecondsSinceEpoch, IntPtr measurement);

    [DllImport(LibName, CallingConvention = CC)]
    [return: MarshalAs(UnmanagedType.U1)]
    internal static extern bool SpecUtils_SpecFile_set_measurement_title(
        IntPtr instance,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string title,
        IntPtr measurement);

    [DllImport(LibName, CallingConvention = CC)]
    [return: MarshalAs(UnmanagedType.U1)]
    internal static extern bool SpecUtils_SpecFile_set_measurement_contained_neutrons(
        IntPtr instance,
        [MarshalAs(UnmanagedType.U1)] bool contained,
        float counts, float neutronLiveTime,
        IntPtr measurement);

    [DllImport(LibName, CallingConvention = CC)]
    [return: MarshalAs(UnmanagedType.U1)]
    internal static extern bool SpecUtils_SpecFile_set_measurement_energy_calibration(
        IntPtr instance, IntPtr energyCal, IntPtr measurement);

    // ---- Measurement lifecycle ----

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern IntPtr SpecUtils_Measurement_create();

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern IntPtr SpecUtils_Measurement_clone(IntPtr instance);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern void SpecUtils_Measurement_destroy(IntPtr instance);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern void SpecUtils_Measurement_set_equal(IntPtr lhs, IntPtr rhs);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern void SpecUtils_Measurement_reset(IntPtr instance);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern uint SpecUtils_Measurement_memmorysize(IntPtr instance);

    // ---- Measurement properties ----

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern IntPtr SpecUtils_Measurement_description(IntPtr instance);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern IntPtr SpecUtils_Measurement_source_string(IntPtr instance);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern IntPtr SpecUtils_Measurement_title(IntPtr instance);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern long SpecUtils_Measurement_start_time_usecs(IntPtr instance);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern byte SpecUtils_Measurement_pcf_tag(IntPtr instance);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern uint SpecUtils_Measurement_number_gamma_channels(IntPtr instance);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern IntPtr SpecUtils_Measurement_gamma_channel_counts(IntPtr instance);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern IntPtr SpecUtils_Measurement_energy_bounds(IntPtr instance);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern IntPtr SpecUtils_Measurement_energy_calibration(IntPtr instance);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern IntPtr SpecUtils_Measurement_energy_calibration_ref(IntPtr instance);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern float SpecUtils_Measurement_real_time(IntPtr instance);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern float SpecUtils_Measurement_live_time(IntPtr instance);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern float SpecUtils_Measurement_neutron_live_time(IntPtr instance);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern double SpecUtils_Measurement_gamma_count_sum(IntPtr instance);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern double SpecUtils_Measurement_neutron_count_sum(IntPtr instance);

    [DllImport(LibName, CallingConvention = CC)]
    [return: MarshalAs(UnmanagedType.U1)]
    internal static extern bool SpecUtils_Measurement_is_occupied(IntPtr instance);

    [DllImport(LibName, CallingConvention = CC)]
    [return: MarshalAs(UnmanagedType.U1)]
    internal static extern bool SpecUtils_Measurement_contained_neutron(IntPtr instance);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern int SpecUtils_Measurement_sample_number(IntPtr instance);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern IntPtr SpecUtils_Measurement_detector_name(IntPtr instance);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern float SpecUtils_Measurement_speed(IntPtr instance);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern OccupancyStatus SpecUtils_Measurement_occupancy_status(IntPtr instance);

    [DllImport(LibName, CallingConvention = CC)]
    [return: MarshalAs(UnmanagedType.U1)]
    internal static extern bool SpecUtils_Measurement_has_gps_info(IntPtr instance);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern double SpecUtils_Measurement_latitude(IntPtr instance);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern double SpecUtils_Measurement_longitude(IntPtr instance);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern long SpecUtils_Measurement_position_time_microsec(IntPtr instance);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern float SpecUtils_Measurement_dose_rate(IntPtr instance);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern float SpecUtils_Measurement_exposure_rate(IntPtr instance);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern IntPtr SpecUtils_Measurement_detector_type(IntPtr instance);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern QualityStatus SpecUtils_Measurement_quality_status(IntPtr instance);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern SourceType SpecUtils_Measurement_source_type(IntPtr instance);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern uint SpecUtils_Measurement_number_remarks(IntPtr instance);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern IntPtr SpecUtils_Measurement_remark(IntPtr instance, uint remarkIndex);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern uint SpecUtils_Measurement_number_parse_warnings(IntPtr instance);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern IntPtr SpecUtils_Measurement_parse_warning(IntPtr instance, uint index);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern double SpecUtils_Measurement_gamma_integral(
        IntPtr instance, float lowerEnergy, float upperEnergy);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern double SpecUtils_Measurement_gamma_channels_sum(
        IntPtr instance, uint startBin, uint endBin);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern uint SpecUtils_Measurement_derived_data_properties(IntPtr instance);

    // ---- Measurement setters ----

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern void SpecUtils_Measurement_set_description(
        IntPtr instance, [MarshalAs(UnmanagedType.LPUTF8Str)] string description);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern void SpecUtils_Measurement_set_source_string(
        IntPtr instance, [MarshalAs(UnmanagedType.LPUTF8Str)] string sourceString);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern void SpecUtils_Measurement_set_gamma_counts(
        IntPtr instance, float[] counts, uint nchannels, float liveTime, float realTime);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern void SpecUtils_Measurement_set_neutron_counts(
        IntPtr instance, float[] counts, uint numTubes, float neutronLiveTime);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern void SpecUtils_Measurement_set_title(
        IntPtr instance, [MarshalAs(UnmanagedType.LPUTF8Str)] string title);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern void SpecUtils_Measurement_set_start_time_usecs(
        IntPtr instance, long startTime);

    [DllImport(LibName, CallingConvention = CC)]
    [return: MarshalAs(UnmanagedType.U1)]
    internal static extern bool SpecUtils_Measurement_set_start_time_str(
        IntPtr instance, [MarshalAs(UnmanagedType.LPUTF8Str)] string startTimeStr);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern void SpecUtils_Measurement_set_pcf_tag(IntPtr instance, byte tagChar);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern void SpecUtils_Measurement_set_sample_number(IntPtr instance, int sampleNum);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern void SpecUtils_Measurement_set_detector_name(
        IntPtr instance, [MarshalAs(UnmanagedType.LPUTF8Str)] string name);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern void SpecUtils_Measurement_set_occupancy_status(
        IntPtr instance, OccupancyStatus status);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern void SpecUtils_Measurement_set_position(
        IntPtr instance, double longitude, double latitude, long positionTimeMicrosec);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern void SpecUtils_Measurement_set_source_type(
        IntPtr instance, SourceType type);

    [DllImport(LibName, CallingConvention = CC)]
    [return: MarshalAs(UnmanagedType.U1)]
    internal static extern bool SpecUtils_Measurement_combine_gamma_channels(
        IntPtr instance, uint nchannel);

    [DllImport(LibName, CallingConvention = CC)]
    [return: MarshalAs(UnmanagedType.U1)]
    internal static extern bool SpecUtils_Measurement_rebin(IntPtr instance, IntPtr cal);

    [DllImport(LibName, CallingConvention = CC)]
    [return: MarshalAs(UnmanagedType.U1)]
    internal static extern bool SpecUtils_Measurement_set_energy_calibration(
        IntPtr instance, IntPtr cal);

    // ---- EnergyCalibration lifecycle ----

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern IntPtr SpecUtils_EnergyCal_create();

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern void SpecUtils_EnergyCal_destroy(IntPtr instance);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern IntPtr SpecUtils_CountedRef_EnergyCal_create();

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern void SpecUtils_CountedRef_EnergyCal_destroy(IntPtr instance);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern IntPtr SpecUtils_EnergyCal_ptr_from_ref(IntPtr instance);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern IntPtr SpecUtils_EnergyCal_make_counted_ref(IntPtr instance);

    // ---- EnergyCalibration properties ----

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern EnergyCalType SpecUtils_EnergyCal_type(IntPtr instance);

    [DllImport(LibName, CallingConvention = CC)]
    [return: MarshalAs(UnmanagedType.U1)]
    internal static extern bool SpecUtils_EnergyCal_valid(IntPtr instance);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern uint SpecUtils_EnergyCal_number_coefficients(IntPtr instance);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern IntPtr SpecUtils_EnergyCal_coefficients(IntPtr instance);
